--- a/20180713_signalr.md
+++ b/20180713_signalr.md
@@ -3,12 +3,12 @@
 SignalR is a framework from ASP NET Core allowing us to establish a two way communication between client and server. This two way communication allows the client to send messages to the server but more importantly allows the server to push messages to the client. 
 SignalR makes use of Websocket when available else it falls back to SSE or pulling. Today we will focus on how to setup SignalR to work with WSS, Websocket secure and how we can authenticate the user requesting to connect to our SignalR hub via Webscoket.
 
-1. Getting stateds with SignalR
+1. Getting started with SignalR
 2. SSL encryption for Websocket Secure WSS
 3. Websocket Authentication with Identity Server 4
 4. SignalR behind Nginx
 
-## 1. Getting stateds with SignalR
+## 1. Getting started with SignalR
 
 The `Hubs` are the main components of SignalR. It is an abstraction of a two way communication available for both client and server. Public functions from the hub can be called from the server code and can be called from the client. The frontend NPM package `@aspnet/signalr` library makes the public functions available from Javascript for client side coding.
 
@@ -315,7 +315,7 @@ With this configuration, we have setup a client application called `my-app`, an 
 
 Next we move on to secure our API. We start first by adding `IdentityServer4.AccessTokenValidation` package as it will be used to validate the bearer token. And we add the authentication to the services and register the authentication middleware early in the pipeline:
 
-```
+```c#
 public class Startup
 {
     public void ConfigureServices(IServiceCollection services)
@@ -463,7 +463,27 @@ namespace Example
 }
 ```
 
-We now have a functional Identity Server able to deliver Bearer token and we have configured our API. What we have left to do is configure our client to request a token.
+We now have a functional Identity Server able to deliver Bearer token and we have configured our API. 
+
+If we want to send message to particular authenticated users using `Clients.User(userId).SendAsync(...)`, we need to provide tell SignalR where to find the `userId` in the claims by registering a `IUserIdProvider`:
+
+```c#
+public class NameUserIdProvider : IUserIdProvider
+{
+    public string GetUserId(HubConnectionContext connection)
+    {
+        return connection.User?.FindFirst("sub")?.Value;
+    }
+}
+```
+
+We specify that the claim with the `userId` is the `sub` claim and we register it to the services:
+
+```c#
+services.AddSingleton<IUserIdProvider, NameUserIdProvider>();
+```
+
+What we have left to do is configure our client to request a token.
 
 ### 3.3 Setup Client
 
@@ -471,7 +491,7 @@ What we want to do is to be able to retrieve a token for `alice` and establish a
 
 ```js
 const connection = new signalR.HubConnectionBuilder()
-    .withUrl("/chathub?access_token=xxxx")
+    .withUrl("/chathub", { accessTokenFactory: () => accessToken })
     .build();
 ```
 
@@ -496,7 +516,7 @@ Lastly we can now complete the `HubConnectionBuilder` token with the retrieved a
 
 ```js
 const connection = new signalR.HubConnectionBuilder()
-    .withUrl("/chathub?access_token=@Model.Token")
+    .withUrl("/chathub", { accessTokenFactory: () => @Model.Token })
     .build();
 ```
 
