--- a/20181012_minio.md
+++ b/20181012_minio.md
@@ -1,13 +1,36 @@
 # Minio blob storage
 
-1. Install and manage Minio
+Minio is a open source distriubted storage. Few weeks ago, I showed how we could use it to [store Microsoft Orleans actor states by implementing a grain storage backed with Minio](). Today we will see how we can install two parts of Minio, the Minio server and the Minio client and we can update it when need be.
+
+1. Install and manage Minio on Ubuntu
 2. Minio content with `mc`
 
-## 1. Install and manage Minio
+## 1. Install and manage Minio on Ubuntu
 
+To install Minio, we follow the [instructions from Minio](https://www.minio.io/downloads.html#download-server-linux-x64) to install the server:
+
+```
+cd /usr/local/bin
+wget https://dl.minio.io/server/minio/release/linux-amd64/minio
+chmod +x minio
+```
+
+We installed minio in `/usr/local/bin` in order to allow users to run and made it executable. 
+Now have minio installed locally and can start it using the `server` command:
+
+```
+minio server --config-dir /etc/minio /var/minio/data
+```
+
+This will start Minio server and place the TLS configuration for secure communication in `/etc/minio` while placing blob data in `/var/minio/data`.
+
+To update Minio, we simply need to run the following and follow the CLI instructions:
+
+```
 minio update
-data `/var/minio/myapp`
-configuration `/etc/minio`
+```
+
+In order to have Minio running as a service, we can create a systemd Unit under `/etc/systemd/system/minio.service`:
 
 ```
 [Unit]
@@ -20,10 +43,18 @@ After=network-online.target
 WorkingDirectory=/usr/local/bin
 User=minio-user
 Group=minio-user
-ExecStart=/usr/local/bin/minio server --config-dir /etc/minio /var/minio/myapp
+ExecStart=/usr/local/bin/minio server --config-dir /etc/minio /var/minio/data
 
 [Install]
 WantedBy=multi-user.target
+```
+
+And run the following:
+
+```
+systemctl enable minio
+systemctl daemon-reload
+systemctl start minio
 ```
 
 ## 2. Minio content with `mc`
