complete minio install/update

--- a/20181012_minio.md
+++ b/20181012_minio.md
@@ -7,6 +7,8 @@ Minio is a open source distriubted storage. Few weeks ago, I showed how we could
 
 ## 1. Install and manage Minio on Ubuntu
 
+[https://docs.minio.io/docs/minio-quickstart-guide.html](https://docs.minio.io/docs/minio-quickstart-guide.html)
+
 To install Minio, we follow the [instructions from Minio](https://www.minio.io/downloads.html#download-server-linux-x64) to install the server:
 
 ```
@@ -57,10 +59,40 @@ systemctl daemon-reload
 systemctl start minio
 ```
 
+Now that we've seen how to install the server, we can install the client.
+
 ## 2. Minio content with `mc`
 
-check with `mc update`
+[https://docs.minio.io/docs/minio-client-quickstart-guide](https://docs.minio.io/docs/minio-client-quickstart-guide)
 
+The client allows us to query blobs from command line. To install it, we follow [the instructions from Minio](https://www.minio.io/downloads.html#download-client).
+
+```
+cd /usr/local/bin
 wget https://dl.minio.io/client/mc/release/linux-amd64/mc
 chmod +x mc
-./mc --help
+```
+
+We now have the client installed locally and we can configure the host. When 
+
+```
+mc config host add myminio http://[minio_ip]:9000 [access_key] [secret_key]
+```
+
+After having configured the host, we can use `mc` to navigate on our storage just like any filesystem.
+
+```
+mc ls myminio
+```
+
+To update `mc`, we check for new update by using the following command:
+
+```
+mc update
+```
+
+Then if an update is available, we remove the old `mc` binary and download the new one.
+
+## Conclusion
+
+Today we saw how to install and update Minio server and Minio client. We also saw how we could setup Minio server to run as a daemon with systemd. Hope you like this post, see you next time! 
