--- a/20181221_vegeta.md
+++ b/20181221_vegeta.md
@@ -92,7 +92,7 @@ vegeta.exe plot -title=Results results.bin > results-plot.html
 
 We can then open the plot in browser and see the results:
 
-![]()
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20181221_vegeta/vegeta.PNG](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20181221_vegeta/vegeta.PNG)
 
 Lastly we can also generate a text report out of the data with `vegeta.exe report` with a `-type` specifying the type of report we want to extract, the default one being `text`:
 
@@ -132,3 +132,6 @@ Bucket           #   %       Histogram
 [100ms,  +Inf]   1   4.00%   ###
 ```
 
+## Conclusion
+
+Today we saw how to use Vegeta to load test endpoints. We saw how easily we could setup targets endpoint by defining a text file specifying the targets. We also saw how json body and headers could be specify for the endpoints. Lastly we saw how to generate reports and the different kind of reports. Hope you liked this post, see you next time!
