--- a/20190125_minio.md
+++ b/20190125_minio.md
@@ -59,6 +59,12 @@ systemctl daemon-reload
 systemctl start minio
 ```
 
+Note that we also specified the user `minio-user` therefore we need to create it with:
+
+```
+sudo useradd -s /sbin/nologin minio-user
+```
+
 Now that we've seen how to install the server, we can install the client.
 
 ## 2. Minio content with `mc`
